[gd_scene load_steps=24 format=2]

[ext_resource path="res://ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/shield_silver.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/glassPanel_200.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/barHorizontal_red_mid 200.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/barHorizontal_white_mid 200.png" type="Texture" id=5]
[ext_resource path="res://assets/grey_circle.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/glassPanel_tab - Red.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/glassPanel_tab.png" type="Texture" id=8]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/explosions/AttackAircraft.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/glassPanel.png" type="Texture" id=11]
[ext_resource path="res://assets/ground_shaker_asset/Bullet 24x24 Free Part 3B.png" type="Texture" id=12]
[ext_resource path="res://assets/Sounds/empty-gun-shot-6209.mp3" type="AudioStream" id=13]

[sub_resource type="Animation" id=5]
resource_name = "BomberFlash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BuffSlot/Bomber:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.101961, 0.101961, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.101961, 0.101961, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "BuckshotFlash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BuffSlot/Buckshot:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BuffSlot/Shield:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BuffSlot/Bomber:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BuffSlot/Buckshot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "ShieldFlash"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BuffSlot/Shield:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "bomberGreenFlash"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BuffSlot/Bomber:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 1, 0.0392157, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "healthbar_flash"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Margin/Container/HealthBar:texture_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 9 )

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource( 1 )

[node name="GlassPanelTab" type="Sprite" parent="."]
position = Vector2( 285, 33 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="fuelProgress" type="TextureProgress" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 270.0
margin_top = 16.0
margin_right = 370.0
margin_bottom = 576.0
rect_scale = Vector2( 0.3, 0.3 )
value = 100.0
texture_progress = ExtResource( 7 )
fill_mode = 3

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Container" type="HBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="TextureRect" type="TextureRect" parent="Margin/Container"]
margin_right = 30.0
margin_bottom = 560.0
texture = ExtResource( 2 )

[node name="HealthBar" type="TextureProgress" parent="Margin/Container"]
margin_left = 34.0
margin_right = 234.0
margin_bottom = 560.0
value = 75.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Margin/Container/HealthBar"]

[node name="VSeparator" type="VSeparator" parent="Margin/Container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 238.0
margin_right = 288.0
margin_bottom = 560.0
custom_constants/separation = 50

[node name="AmmoGauge" type="TextureProgress" parent="Margin/Container"]
margin_left = 292.0
margin_right = 340.0
margin_bottom = 560.0
value = 90.0
texture_progress = ExtResource( 6 )
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0

[node name="VSeparator2" type="VSeparator" parent="Margin/Container"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 344.0
margin_right = 394.0
margin_bottom = 560.0
custom_constants/separation = 50

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BomberFlash = SubResource( 5 )
anims/BuckshotFlash = SubResource( 7 )
anims/RESET = SubResource( 6 )
anims/ShieldFlash = SubResource( 8 )
anims/bomberGreenFlash = SubResource( 9 )
anims/healthbar_flash = SubResource( 1 )

[node name="scoreLabel" type="Label" parent="."]
margin_left = 26.0
margin_top = 61.0
margin_right = 166.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
text = "0000000000"

[node name="BuffSlot" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -59.0
margin_bottom = -59.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="Shield" type="Sprite" parent="BuffSlot"]
position = Vector2( -54, 4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="BuffSlot/Shield"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 2.1, 2.1 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="BuffSlot/Shield"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="ShieldLabel" type="Label" parent="BuffSlot/Shield"]
margin_left = 18.0
margin_top = 10.0
margin_right = 39.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0
"

[node name="Label" type="Label" parent="BuffSlot/Shield"]
margin_left = -49.3333
margin_top = 17.3333
margin_right = -9.33331
margin_bottom = 54.3333
custom_fonts/font = SubResource( 4 )
text = "1"

[node name="Bomber" type="Sprite" parent="BuffSlot"]
position = Vector2( -2, 4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="BuffSlot/Bomber"]
scale = Vector2( 0.9, 1 )
texture = ExtResource( 10 )

[node name="ArtillaryLabel" type="Label" parent="BuffSlot/Bomber"]
margin_left = 18.0
margin_top = 10.0
margin_right = 39.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0
"

[node name="Label" type="Label" parent="BuffSlot/Bomber"]
margin_left = -46.6667
margin_top = 17.3333
margin_right = -6.66669
margin_bottom = 54.3333
custom_fonts/font = SubResource( 4 )
text = "2"

[node name="Buckshot" type="Sprite" parent="BuffSlot"]
position = Vector2( 50, 4 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="ERDProgressBar" type="TextureProgress" parent="BuffSlot/Buckshot"]
visible = false
modulate = Color( 0, 0.996078, 0.227451, 1 )
margin_left = -49.3333
margin_top = -50.6667
margin_right = 50.6667
margin_bottom = 49.3333
max_value = 3.0
value = 3.0
texture_progress = ExtResource( 11 )
fill_mode = 3

[node name="Sprite2" type="Sprite" parent="BuffSlot/Buckshot"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -0.266724, -10.0334 )
rotation = -1.5708
scale = Vector2( 2.1, 2.2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite" type="Sprite" parent="BuffSlot/Buckshot"]
position = Vector2( -0.266724, -10.0334 )
rotation = -1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite3" type="Sprite" parent="BuffSlot/Buckshot"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 13.2062, -5.06274 )
rotation = -1.10307
scale = Vector2( 2.1, 2.2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite4" type="Sprite" parent="BuffSlot/Buckshot"]
position = Vector2( 13.2063, -5.06274 )
rotation = -1.10307
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite7" type="Sprite" parent="BuffSlot/Buckshot"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 19.2535, 4.63513 )
rotation = -0.823305
scale = Vector2( 2.1, 2.2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite8" type="Sprite" parent="BuffSlot/Buckshot"]
position = Vector2( 19.2537, 4.63513 )
rotation = -0.823305
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite5" type="Sprite" parent="BuffSlot/Buckshot"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -13.6833, -2.74829 )
rotation = -2.25123
scale = Vector2( 2.1, 2.2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite6" type="Sprite" parent="BuffSlot/Buckshot"]
position = Vector2( -13.6836, -2.74835 )
rotation = -2.25123
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite9" type="Sprite" parent="BuffSlot/Buckshot"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -18.0272, 8.284 )
rotation = -2.63915
scale = Vector2( 2.1, 2.2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Sprite10" type="Sprite" parent="BuffSlot/Buckshot"]
position = Vector2( -18.0275, 8.28394 )
rotation = -2.63915
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
hframes = 22
vframes = 15

[node name="Label" type="Label" parent="BuffSlot/Buckshot"]
margin_left = 18.0
margin_top = 10.0
margin_right = 39.0
margin_bottom = 87.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0
"

[node name="Label2" type="Label" parent="BuffSlot/Buckshot"]
margin_left = -46.6667
margin_top = 17.3333
margin_right = -6.66669
margin_bottom = 54.3333
custom_fonts/font = SubResource( 4 )
text = "3"

[node name="Empty" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="highScoreLabel" type="Label" parent="."]
margin_left = 29.0
margin_top = 98.0
margin_right = 129.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 10 )
text = "High Score: "

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
